# Waltzboard

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  api.py  app.py  bayesian.ipynb  config.py  demo.ipynb  demo.py  eslint.config.mjs  exce_time_checker.py  main.ipynb  nohup.out  package.json  pnpm-lock.yaml  probabilistic.ipynb  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
api/: config.py  models.py  utills.py
api/routers/: __init__.py  get_chart.py  infer.py  init.py  inspect.py  is_valid.py  recommends.py  score.py  train.py  variants.py
client/: .prettierrc  README.md  app.py  config.ts  index.html  package.json  pnpm-lock.yaml  requirements.txt
client/api/: models.py
client/src/: App.tsx  main.tsx
client/src/components/: AggregationSelector.tsx  AppendChartView.tsx  AttributeSelector.tsx  ChartTypeSelector.tsx  ChartView.tsx  InspectionView.tsx  Layout.tsx  Main.tsx  ReasoningView.tsx  RecommendedChartView.tsx  ResultPlot.tsx  ScoreDistView.tsx  SpaceDistView.tsx  TransformationSelector.tsx  WeightSlider.tsx
client/src/controller/: aggregation.ts  append.ts  attribute.ts  chartType.ts  config.ts  dashboard.ts  details.ts  infer.ts  init.ts  oracleWeight.ts  parameters.ts  recommend.ts  score.ts  taskType.ts  train.ts  transformation.ts  variants.ts
client/src/types/: API.ts  Aggregation.ts  Attribute.ts  ChartType.ts  ChartView.ts  OracleResult.ts  OracleWeight.ts  Space.ts  TaskType.ts  Transformation.ts
client/src/utils/: fromChartView.ts  index.ts  toChartView.ts
data/: birdstrikes_gpt.csv  birdstrikes_kr.csv  movies_gpt.csv  movies_kr.csv  student_performance.csv  student_performance_kr.csv
gleaner/: __init__.py  config.py  gleaner.py  utill.py  utills.py
gleaner/charts/: __init__.py  bar_chart.py  base_chart.py  chart_map.py
gleaner/explorer/: __init__.py  explorer.py  explorer_result.py
gleaner/generator/: generator.py  generator_parameters.py
gleaner/model/: __init__.py  attribute.py  chart_map.py  data_transforms.py  gleaner_chart.py  gleaner_dahsboard.py  task_type.py  tokens.py
gleaner/model/charts/: bar_chart.py  base_chart.py  box_plot.py  heatmap.py  line_chart.py  pie_chart.py  scatter_plot.py  strip_plot.py
gleaner/oracle/: __init__.py  oracle.py  oracle_result.py
gleaner/oracle/scores/: __init__.py  anova.py  conciseness.py  coverage.py  diversity.py  interestingness.py  parsimony.py  specificity.py
locales/: default.json  ko.json
src/: ChartMap.py  Columbus.py  Columbus_old.py  ExpressivenessMap.py  ProbColumbus.py  __init__.py  config.py  gleaner.py
src/explorer/: Explorer.py  ExplorerConfig.py  ExplorerResult.py  __init__.py  explorer.py
src/generator/: Columbus_old.py  Generator.py  PriorParameters.py  __init__.py  generator.py  generator_config.py  generator_parameters.py
src/model/: Attribute.py  DataTransforms.py  DataTransformsModel.py  Encodings.py  Node.py  TaskType.py  __init__.py  attribute.py  data_transforms.py  encodings.py  gleaner_chart.py  gleaner_dahsboard.py  task_type.py
src/oracle/: ChartType.py  ColumbusOracle.py  Coverage.py  Diversity.py  Interestingness.py  Oracle.py  OracleResult.py  OracleWeight.py  ResultModel.py  Specificity.py  Task.py  TaskType.py  Uniqueness.py  __init__.py  oracle.py  oracle_result.py
src/oracle/scores/: Coverage.py  Diversity.py  Interestingness.py  Specificity.py  __init__.py  coverage.py  diversity.py  interestingness.py  specificity.py
src/space/: Columbus.py  DataModel.py  DataTransform.py  DataTransforms.py  DataTransformsModel.py  Encodings.py  EncodingsModel.py  Node.py  ProbabilisticNode.py  TAEVA.py  __init__.py
view/: App.tsx  config.ts  index.html  main.tsx
view/components/: AppendChartView.tsx  AttributeSelector.tsx  ChartTypeSelector.tsx  ChartView.tsx  InspectionView.tsx  Layout.tsx  Main.tsx  ScoreDistView.tsx  SpaceDistView.tsx  TransformationSelector.tsx  WeightSlider.tsx
view/controller/: append.ts  attribute.ts  chartType.ts  dashboard.ts  details.ts  infer.ts  init.ts  oracleWeight.ts  score.ts  train.ts  transformation.ts
view/types/: API.ts  Attribute.ts  ChartType.ts  ChartView.ts  Space.ts  TaskType.ts
view/utils/: fromChartView.ts  index.ts  toChartView.ts
waltzboard/: __init__.py  app.py  config.py  utills.py  waltzboard.py
waltzboard/api/: config.py  models.py  utills.py
waltzboard/api/routers/: get_chart.py  infer.py  init.py  inspect.py  is_valid.py  recommends.py  score.py  train.py  variants.py
waltzboard/explorer/: __init__.py  explorer.py  explorer_config.py  explorer_result.py
waltzboard/generator/: __init__.py  generator.py  generator_parameters.py
waltzboard/model/: __init__.py  attribute.py  chart_map.py  const.py  waltzboard_chart.py  waltzboard_dahsboard.py
waltzboard/model/charts/: __init__.py  bar_chart.py  base_chart.py  box_plot.py  heatmap.py  line_chart.py  pie_chart.py  scatter_plot.py  strip_plot.py
waltzboard/oracle/: __init__.py  oracle.py  oracle_result.py  oracle_weight.py
waltzboard/oracle/scores/: __init__.py  coverage.py  diversity.py  interestingness.py  parsimony.py  specificity.py
